[gd_scene load_steps=66 format=2]

[ext_resource path="res://scenes/main.gd" type="Script" id=1]
[ext_resource path="res://sprites/Hintergrund.png" type="Texture" id=2]
[ext_resource path="res://scenes/Cursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Tree.gd" type="Script" id=4]
[ext_resource path="res://sprites/trees/Standard_Baum.png" type="Texture" id=5]
[ext_resource path="res://sprites/trees/Eukalyptus_Baum.png" type="Texture" id=6]
[ext_resource path="res://sprites/trees/Birken_Baum.png" type="Texture" id=7]
[ext_resource path="res://sprites/trees/Kirsch_Baum.png" type="Texture" id=8]
[ext_resource path="res://scenes/branch.gd" type="Script" id=9]
[ext_resource path="res://sprites/branches/Standard_Ast.png" type="Texture" id=10]
[ext_resource path="res://sprites/branches/Eukalyptus_Ast.png" type="Texture" id=11]
[ext_resource path="res://sprites/branches/Birken_Ast.png" type="Texture" id=12]
[ext_resource path="res://sprites/branches/Kirsch_Ast.png" type="Texture" id=13]
[ext_resource path="res://scenes/branchSprite.gd" type="Script" id=14]
[ext_resource path="res://sprites/people/hut2.png" type="Texture" id=15]
[ext_resource path="res://sprites/people/hut1.png" type="Texture" id=16]
[ext_resource path="res://sprites/people/lang1.png" type="Texture" id=17]
[ext_resource path="res://sprites/people/lang2.png" type="Texture" id=18]
[ext_resource path="res://sprites/people/kurz1.png" type="Texture" id=19]
[ext_resource path="res://sprites/people/kurz2.png" type="Texture" id=20]
[ext_resource path="res://sprites/people/mittellang1.png" type="Texture" id=21]
[ext_resource path="res://sprites/people/mittellang2.png" type="Texture" id=22]
[ext_resource path="res://scenes/human.gd" type="Script" id=23]
[ext_resource path="res://sprites/weapons/Taschenmesser.png" type="Texture" id=24]
[ext_resource path="res://sprites/weapons/Fuchss채ge.png" type="Texture" id=25]
[ext_resource path="res://sprites/weapons/Kreiss채ge.png" type="Texture" id=26]
[ext_resource path="res://sprites/weapons/Motors채ge.png" type="Texture" id=27]
[ext_resource path="res://scenes/Weapon.gd" type="Script" id=28]
[ext_resource path="res://sprites/holz.png" type="Texture" id=29]
[ext_resource path="res://sounds/weapons/Laubs채ge_hin.wav" type="AudioStream" id=30]
[ext_resource path="res://sounds/Holzbruch2_sound.wav" type="AudioStream" id=31]
[ext_resource path="res://sounds/Holzbruch1_sound.wav" type="AudioStream" id=32]
[ext_resource path="res://sounds/gameOver_sound.wav" type="AudioStream" id=33]
[ext_resource path="res://scenes/Stopwatch.gd" type="Script" id=34]
[ext_resource path="res://fonts/Caliban.ttf" type="DynamicFontData" id=35]
[ext_resource path="res://scenes/pointLabel.gd" type="Script" id=36]
[ext_resource path="res://scenes/sawdustLabel.gd" type="Script" id=37]
[ext_resource path="res://sprites/GUI/Lebensleiste.png" type="Texture" id=38]
[ext_resource path="res://scenes/Sprite.gd" type="Script" id=39]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=40]
[ext_resource path="res://sprites/GUI/Restart block.png" type="Texture" id=41]
[ext_resource path="res://scenes/Restart.gd" type="Script" id=42]
[ext_resource path="res://sprites/GUI/UPGRADE block.png" type="Texture" id=43]
[ext_resource path="res://scenes/Upgrade.gd" type="Script" id=44]
[ext_resource path="res://sprites/GUI/QUIT block.png" type="Texture" id=45]
[ext_resource path="res://scenes/Quit.gd" type="Script" id=46]
[ext_resource path="res://sprites/GUI/MENU block.png" type="Texture" id=47]
[ext_resource path="res://scenes/TimeBonusLabel.gd" type="Script" id=48]
[ext_resource path="res://scenes/Highscore.gd" type="Script" id=49]
[ext_resource path="res://scenes/TreesKilled.gd" type="Script" id=50]
[ext_resource path="res://sounds/select.wav" type="AudioStream" id=51]
[ext_resource path="res://scenes/Camera2D.gd" type="Script" id=52]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "Standard",
"speed": 0.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Eukalyptus",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Birken",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Kirsch",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Standard",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Eukalyptus",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "Birken",
"speed": 0.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "Kirsch",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 395.962, 175.891 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0182693, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 551, 629 ), Vector2( 551, 629 ), Vector2( 551, 2629 ) ]
}

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "hut",
"speed": 0.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "lang",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "kurz",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "mittellang",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": false,
"name": "Weapons",
"speed": 0.0
} ]

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.8
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 10.0
angle_random = 1.0
scale = 0.5

[sub_resource type="DynamicFont" id=8]
size = 90
outline_size = 2
outline_color = Color( 0.443137, 0.184314, 0.184314, 1 )
font_data = ExtResource( 35 )

[sub_resource type="DynamicFont" id=9]
size = 50
outline_size = 2
outline_color = Color( 0.486275, 0.223529, 0.223529, 1 )
font_data = ExtResource( 35 )

[sub_resource type="DynamicFont" id=10]
size = 64
font_data = ExtResource( 35 )

[sub_resource type="DynamicFont" id=11]
size = 50
outline_size = 2
outline_color = Color( 0.529412, 0.0784314, 0.0784314, 1 )
font_data = ExtResource( 35 )

[sub_resource type="DynamicFont" id=12]
size = 35
outline_size = 1
outline_color = Color( 0.168627, 0.129412, 0.45098, 1 )
font_data = ExtResource( 35 )

[sub_resource type="DynamicFont" id=13]
size = 18
outline_size = 1
outline_color = Color( 0.239216, 0, 0, 1 )
font_data = ExtResource( 35 )

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
z_index = -10
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Cursor" parent="." instance=ExtResource( 3 )]
z_index = 10

[node name="Tree" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 4 )

[node name="trunk" type="AnimatedSprite" parent="Tree"]
frames = SubResource( 1 )
animation = "Kirsch"
centered = false

[node name="branch" type="Area2D" parent="Tree"]
position = Vector2( 521.548, 628.869 )
z_index = 4
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="branchSprite" type="AnimatedSprite" parent="Tree/branch"]
z_index = 7
z_as_relative = false
frames = SubResource( 2 )
animation = "Standard"
centered = false
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tree/branch"]
visible = false
position = Vector2( 128, 80 )
shape = SubResource( 3 )

[node name="Animation" type="AnimationPlayer" parent="Tree/branch"]
anims/fall = SubResource( 4 )

[node name="human" type="AnimatedSprite" parent="Tree/branch"]
position = Vector2( -1.29999, 28.6 )
scale = Vector2( 0.3, 0.3 )
z_index = 4
frames = SubResource( 5 )
animation = "lang"
offset = Vector2( 1160, -350 )
script = ExtResource( 23 )

[node name="Weapon" type="AnimatedSprite" parent="Tree/branch/human"]
position = Vector2( -140, -338 )
z_index = 6
z_as_relative = false
frames = SubResource( 6 )
animation = "Weapons"
centered = false
script = ExtResource( 28 )

[node name="sawdust" type="Particles2D" parent="Tree/branch/human/Weapon"]
position = Vector2( 0, 500 )
emitting = false
amount = 500
lifetime = 10.0
speed_scale = 2.0
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 29 )

[node name="SawdustTimer" type="Timer" parent="Tree/branch/human/Weapon"]
wait_time = 0.1
one_shot = true

[node name="Ritsch" type="AudioStreamPlayer" parent="Tree/branch/human/Weapon"]
stream = ExtResource( 30 )
volume_db = -5.0

[node name="Holzbruch2" type="AudioStreamPlayer" parent="Tree/branch"]
stream = ExtResource( 31 )

[node name="Knochenbruch1" type="AudioStreamPlayer" parent="Tree/branch"]
stream = ExtResource( 32 )

[node name="gameOver" type="AudioStreamPlayer" parent="Tree/branch"]
stream = ExtResource( 33 )

[node name="PointsStopwatch" type="Node" parent="Tree/branch"]
script = ExtResource( 34 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="pointLabel" type="Label" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 110.684
margin_right = -256.0
margin_bottom = -758.316
custom_fonts/font = SubResource( 8 )
text = "0"
align = 1
valign = 1
script = ExtResource( 36 )

[node name="sawdustLabel" type="Label" parent="HUD"]
anchor_right = 1.0
margin_left = 224.0
margin_top = 35.3
margin_right = -69.0
margin_bottom = 98.3
custom_fonts/font = SubResource( 9 )
text = "0"
align = 2
valign = 1
script = ExtResource( 37 )

[node name="lives" type="Sprite" parent="HUD"]
texture = ExtResource( 38 )
centered = false
script = ExtResource( 39 )

[node name="Holz" type="Sprite" parent="HUD"]
position = Vector2( 511.888, 57.707 )
rotation = 0.174533
scale = Vector2( 0.799207, 0.799207 )
texture = ExtResource( 29 )

[node name="Menu" type="CanvasLayer" parent="."]
script = ExtResource( 40 )

[node name="Restart" type="Button" parent="Menu"]
margin_left = 36.7781
margin_top = 388.853
margin_right = 487.778
margin_bottom = 459.853
custom_fonts/font = SubResource( 10 )
icon = ExtResource( 41 )
flat = true
script = ExtResource( 42 )

[node name="Upgrade" type="Button" parent="Menu"]
margin_left = 34.5059
margin_top = 498.348
margin_right = 489.506
margin_bottom = 569.348
custom_fonts/font = SubResource( 10 )
icon = ExtResource( 43 )
flat = true
script = ExtResource( 44 )

[node name="Quit" type="Button" parent="Menu"]
margin_left = 39.3463
margin_top = 617.278
margin_right = 495.346
margin_bottom = 688.278
custom_fonts/font = SubResource( 10 )
icon = ExtResource( 45 )
flat = true
script = ExtResource( 46 )

[node name="background" type="Sprite" parent="Menu"]
position = Vector2( 248.476, 505.504 )
z_index = -1
texture = ExtResource( 47 )
__meta__ = {
"_edit_lock_": true
}

[node name="TimeBonusLabel" type="Label" parent="Menu"]
margin_left = 26.0
margin_top = 194.0
margin_right = 516.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 11 )
text = "Time Bonus: "
valign = 1
script = ExtResource( 48 )

[node name="Highscore" type="Label" parent="Menu"]
margin_left = 8.0
margin_top = 32.0
margin_right = 221.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.337255, 0.388235, 0.847059, 1 )
text = "Highscore: "
autowrap = true
script = ExtResource( 49 )

[node name="TreesKilled" type="Label" parent="Menu"]
margin_left = 279.188
margin_top = 251.228
margin_right = 551.188
margin_bottom = 275.228
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.784314, 0, 0.164706, 1 )
text = "Trees killed: "
valign = 1
autowrap = true
script = ExtResource( 50 )

[node name="select" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource( 51 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 540, 960 )
zoom = Vector2( 2, 2 )
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 52 )
[connection signal="fall" from="Tree" to="Tree/branch" method="_on_Tree_fall"]
[connection signal="cut" from="Tree/branch" to="HUD/sawdustLabel" method="_on_branch_cut"]
[connection signal="cut" from="Tree/branch" to="Menu" method="_on_branch_cut"]
[connection signal="cut" from="Tree/branch" to="Menu/TimeBonusLabel" method="_on_branch_cut"]
[connection signal="cut" from="Tree/branch" to="Menu/TreesKilled" method="_on_branch_cut"]
[connection signal="slash" from="Tree/branch" to="HUD/sawdustLabel" method="_on_branch_slash"]
[connection signal="slash" from="Tree/branch" to="Tree/branch/human/Weapon" method="_on_branch_slash"]
[connection signal="slash" from="Tree/branch" to="HUD/pointLabel" method="_on_branch_slash"]
[connection signal="slash" from="Tree/branch" to="Tree" method="_on_branch_slash"]
[connection signal="animation_finished" from="Tree/branch/Animation" to="Tree/branch" method="_on_Animation_animation_finished"]
[connection signal="timeout" from="Tree/branch/human/Weapon/SawdustTimer" to="Tree/branch/human/Weapon" method="_on_SawdustTimer_timeout"]
[connection signal="mouse_entered" from="Menu/Restart" to="Menu/Restart" method="_on_Restart_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Restart" to="Menu/Restart" method="_on_Restart_mouse_exited"]
[connection signal="pressed" from="Menu/Restart" to="Menu/Restart" method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="Menu/Upgrade" to="Menu/Upgrade" method="_on_Upgrade_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Upgrade" to="Menu/Upgrade" method="_on_Upgrade_mouse_exited"]
[connection signal="pressed" from="Menu/Upgrade" to="Menu/Upgrade" method="_on_Upgrade_pressed"]
[connection signal="mouse_entered" from="Menu/Quit" to="Menu/Quit" method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Quit" to="Menu/Quit" method="_on_Quit_mouse_exited"]
[connection signal="pressed" from="Menu/Quit" to="Menu/Quit" method="_on_Quit_pressed"]
[connection signal="TimeBonusCalculated" from="Menu/TimeBonusLabel" to="Menu/Highscore" method="_on_TimeBonusLabel_TimeBonusCalculated"]
